k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: household-hub
  namespace: household-hub
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: household-hub-web
    networking.gke.io/managed-certificates: household-hub-certificate,famelo-certificate
    networking.gke.io/v1beta1.FrontendConfig: household-hub-frontend
spec:
  rules:
    - host: famelo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: household-hub
                port:
                  number: 80
    - host: www.famelo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: household-hub
                port:
                  number: 80
    - host: household-hub.8-233-48-73.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: household-hub
                port:
                  number: 80
